--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,5 +1,5 @@
 
-<button (click)="goBack()">go back</button>
+
 <div *ngIf="hero">
     <h2>{{hero.name | uppercase}} Details</h2>
     <div><span>id: </span>{{hero.id}}</div>
@@ -11,3 +11,5 @@
     </div>
 </div>
 
+<button (click)="goBack()">go back</button>
+<button (click)="save()">save</button>
