add knobs addon

--- a/src/app/task/task.component.html
+++ b/src/app/task/task.component.html
@@ -4,7 +4,7 @@
         <span class="checkbox-custom" (click)="onArchive(task.id)"></span>
     </label>
     <div class="title">
-        <input type="text" [value]="task?.title" readonly="true" placeholder="Input title" />
+        <input type="text" [value]="task?.title" readonly="true" placeholder="Input title" [ngStyle]="{textOverflow:'ellipsis'}" />
     </div>
     <div class="actions">
         <a *ngIf="task?.state !== 'TASK_ARCHIVED'" (click)="onPin(task.id)">
