--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -4,7 +4,7 @@
     <label>Hero name:
         <input #heroName />
     </label>
-    <button (click)="add(heroName.value); heroName.value=''" >add</button>
+    <button (click)="add(heroName.value); heroName.value=''">add</button>
 </div>
 
 <ul class="heroes">
@@ -12,7 +12,14 @@
         <a routerLink="/detail/{{hero.id}}">
             <span class="badge">{{hero.id}}</span>{{hero.name}}
         </a>
-        <button class="delete" title="delete hero"
-            (click)="delete(hero)" >x</button>
+        <button class="delete" title="delete hero" (click)="delete(hero)">x</button>
     </li>
+    <div *ngFor="let hero of heroes" style="margin: 50px;">
+        <div>
+            <button (click)="child.count=child.count+1">Add</button>
+            <button (click)="sub()">Sub</button>
+            <app-hero-tag #child [hero]="hero" (deleteHero)="delete($event)"></app-hero-tag>
+        </div>
+
+    </div>
 </ul>
